z-index fix staging test 4.0

--- a/app/Resources/assets/scss/app.scss
+++ b/app/Resources/assets/scss/app.scss
@@ -227,6 +227,3 @@ strong strong {
   display: block;
 }
 
-.popup{
-  z-index: 1020;
-}
